# todo-list-api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  security.py
app/routers/: login.py  register.py  todos.py
todo_list/: Create todo.yml  Delete todos.yml  Get todo.yml  Get todos.yml  Login user.yml  Register user.yml  Update todo.yml  opencollection.yml
todo_list/environments/: local.yml
